--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThuanHighClean</title>
+    <meta
+      property="og:image"
+      content="https://www.thuanhighclean.com/assets/open_graph.png"
+    />
+    <meta property="og:url" content="https://thuanhighclean.com" />
+    <meta property="og:type" content="website" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
