resolve open graph images

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>ThuanHighClean</title>
     <meta
       property="og:image"
-      content="https://www.thuanhighclean.com/assets/open_graph.png"
+      content="Loading ..."
     />
     <meta property="og:url" content="https://thuanhighclean.com" />
     <meta property="og:type" content="website" />
     <meta name="robots" content="index, follow" />
+    <meta name="description" content="Loading ..." />
+    <meta name="keywords" content="Loading ..." />
+    <meta property="og:url" content="https://thuanhighclean.com" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
