resolve open graph images

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThuanHighClean</title>
-    <meta
-      property="og:image"
-      content="Loading ..."
-    />
+    <meta property="og:image" content="/assets/open_graph.png" />
     <meta property="og:url" content="https://thuanhighclean.com" />
     <meta property="og:type" content="website" />
     <meta name="robots" content="index, follow" />
