--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta property="og:url" content="https://thuanhighclean.com" />
     <meta property="og:type" content="website" />
     <meta name="robots" content="index, follow" />
-    <meta name="description" content="Loading ..." />
-    <meta name="keywords" content="Loading ..." />
+    <meta name="description" content="Thuan High Clean cung cấp dịch vụ vệ sinh chuyên nghiệp: giặt thảm văn phòng, giặt nệm, phục hồi nệm, giặt thảm trang trí, giặt ghế văn phòng và nhiều hơn nữa. Đội ngũ chuyên nghiệp, trang thiết bị hiện đại, đảm bảo chất lượng và sự hài lòng của khách hàng." />
+    <meta name="keywords" content="ThuanHighClean, thuan high clean, thuanhighclean, thuanhigh, dịch vụ vệ sinh, giặt thảm văn phòng, giặt nệm, phục hồi nệm, giặt thảm trang trí, giặt ghế văn phòng, Thuan High Clean, dịch vụ giặt thảm, vệ sinh văn phòng" />
   </head>
   <body>
     <div id="root"></div>
